--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,2 @@
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+external.config.server.test.message=Hi External Config Server
