--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-external.config.server.test.message=GITHUB
+external.config.server.test.message=GITHUB NAME 
