--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ eureka:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql@localhost:1337:dbName
+    url: jdbc:mysql://localhost:3306/microservicetask
     username: root
     password: rootuser
 
