--- a/application.yml
+++ b/application.yml
@@ -12,9 +12,9 @@ spring:
     username: root
     password: rootuser
 
-  config:
-    import:
-      - optional:configserver:http://localhost:8888
+  # config:
+  #   import:
+  #     - optional:configserver:http://localhost:8888
 
 ## Connection Pooling
     hikari:
